Fixed issue where text went off screen on mobile view in hamburger menu

--- a/src/main.css
+++ b/src/main.css
@@ -41,8 +41,7 @@
 }
 
 #navLink:hover {
-    transform: scale(1.1);
-    font-weight: 500;
+    font-weight: 600;
     transition: 0.2s;
 }
 
